1.2.10
------

Added error message to TrainEval's eval() method. (Jason)


1.2.9 (Bug fix release)
_____

Modified the cutoff loop in DataIndexer to use the increment() method
of TObjectIntHashMap. (Jason)

Fixed a bug (found by Chieu Hai Leong) in which the correctionConstant
of GISModel was an int that was used in division.  Now,
correctionConstant is a double. (Jason)


1.2.8
_____

Modified GISTrainer to use the new increment() and adjustValue()
methods available in Trove 0.1.4 hashmaps. (Jason)

Set up the GISTrainer to use an initial capacity and load factor for
the big hashmaps it uses.  The initial capacity is half the number of
outcomes, and the load factor is 0.9. (Jason)

(opennlp.maxent.DataIndexer)  Do not index events with 0 active features.
(Eric)

Upgraded trove dependency to 0.1.1 (includes TIntArrayList, with reset()) 
(Eric)

(opennlp.maxent.DataIndexer)
Refactored event count computation so that the cutoff can be applied while
events are read.  This obviates the need for a separate pass over the
predicates between event count computation and indexing.  It also saves
memory by reducing the amount of temporary data needed and by avoiding
creation of instances of the Counter class.  the applyCutoff() method
was no longer needed and so is gone. (Eric)

(opennlp.maxent.DataIndexer)
Made the event count computation + cutoff application also handle the
assignment of unique indexes to predicates that "make the cut."  This
saves a fair amount of time in the indexing process. (Eric)

(opennlp.maxent.DataIndexer)
Refactored the indexing implementation so that TIntArrayLists are 
(re-)used for constructing the array of predicate references associated
with each ComparableEvent.  Using the TIntArrayList instead of an
ArrayList of Integers dramatically reduces the amount of garbage
produced during indexing; it's also smaller. (Eric)

(opennlp.maxent.DataIndexer)
removed toIntArray() method, since TIntArrayList provides the same